@@ -1,3 +1,9 @@
+2020-11-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* Magick++/lib/Magick++/Drawable.h: Decided to continue using
+	std::unary_function if C++ version is less than C++'17 since
+	otherwise it may be changing an interface.
+
 2020-11-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/gif.c (ReadGIFImage): Use resource-limited memory
